2018-08-24  Alex Christensen  <achristensen@webkit.org>

        Introduce _WKInspector
        https://bugs.webkit.org/show_bug.cgi?id=188923
        <rdar://problem/34657861>

        Reviewed by Brian Burg.

        * MiniBrowser/mac/WK2BrowserWindowController.m:
        (-[WK2BrowserWindowController validateMenuItem:]):
        (-[WK2BrowserWindowController showHideWebInspector:]):

2018-08-24  Jonathan Bedard  <jbedard@apple.com>

        Fix handling of iOS minor versions in default_baseline_search_path
        https://bugs.webkit.org/show_bug.cgi?id=188902

        Reviewed by Aakash Jain.

        * Scripts/webkitpy/port/ios.py:
        (IOSPort.default_baseline_search_path): When the major version matches the major version of the CURRENT_VERSION, treat
        it as a the CURRENT_VERSION.

2018-08-24  Antti Koivisto  <antti@apple.com>

        Allow creating WeakPtrs to const objects
        https://bugs.webkit.org/show_bug.cgi?id=188785

        Reviewed by Geoff Garen.

        * TestWebKitAPI/Tests/WTF/WeakPtr.cpp:
        (TestWebKitAPI::Base::weakPtrFactory const):
        (TestWebKitAPI::TEST):
        (TestWebKitAPI::Base::weakPtrFactory): Deleted.

2018-08-23  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK][WPE] Add API to inject/register user content in isolated worlds
        https://bugs.webkit.org/show_bug.cgi?id=188883

        Reviewed by Michael Catanzaro.

        Add test cases for the new API.

        * TestWebKitAPI/Tests/WebKitGLib/TestWebKitUserContentManager.cpp:
        (isStyleSheetInjectedForURLAtPath):
        (isScriptInjectedForURLAtPath):
        (testUserContentManagerInjectedStyleSheet):
        (testUserContentManagerInjectedScript):
        (UserScriptMessageTest::registerHandler):
        (UserScriptMessageTest::unregisterHandler):
        (UserScriptMessageTest::postMessageAndWaitUntilReceived):
        (testUserContentManagerScriptMessageInWorldReceived):
        (beforeAll):
